kubernetes/apps/storage/s3/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3
  annotations:
    hajimari.io/enable: "true"
spec:
  ingressClassName: external
  tls:
    - secretName: ${SECRET_DOMAIN/./-}-production-tls
      hosts:
        - s3.${SECRET_DOMAIN}
  rules:
    - host: s3.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s3
                port:
                  number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3-console
  annotations:
    hajimari.io/enable: "true"
spec:
  ingressClassName: external
  tls:
    - secretName: ${SECRET_DOMAIN/./-}-production-tls
      hosts:
        - console.s3.${SECRET_DOMAIN}
  rules:
    - host: console.s3.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s3
                port:
                  number: 9001
